feat: standardize footers, improve spacing, and update documentation
- Standardized footer across all demo pages (index, converter, compare, benchmark, cdn, cngov, wasm)
- Added 'chips' styling to footer links for a more balanced look
- Improved vertical spacing between footer paragraphs in style.css
- Updated index.html documentation with enhanced 'Supported Configurations' table
- Added credits and links for community-contributed configurations (TerryTian-Tech)
- Fixed HTML syntax errors in compare.html

--- a/compare.html
+++ b/compare.html
@@ -31,13 +31,6 @@
                 <div class="status-dot"></div>
                 <span id="status-text">初始化中...</span>
             </div>
-            <div class="chips">
-                <a href="index.html" class="chip" style="text-decoration:none;">首頁 Home</a>
-                <a href="https://github.com/frankslin/OpenCC/tree/master/wasm-lib" target="_blank" class="chip"
-                    style="text-decoration:none;">GitHub</a>
-                <a href="https://www.npmjs.com/package/opencc-wasm" target="_blank" class="chip"
-                    style="text-decoration:none;">npm</a>
-            </div>
         </header>
 
         <div class="input-section">
@@ -64,8 +57,19 @@
         </div>
 
         <div class="footer">
-            本頁面通過 jsdelivr CDN 加載 opencc-wasm __OPENCC_WASM_VERSION__，使用 opencc-js 相容 API。<br>
-            可比較所有配置的轉換結果，方便觀察不同模式的輸出差異。
+            <p class="chips">
+                <a href="index.html" class="chip" style="text-decoration:none;">首頁 Home</a>
+                <a href="https://github.com/frankslin/OpenCC/tree/master/wasm-lib" class="chip" target="_blank">OpenCC
+                    WASM</a>
+                <a href="https://github.com/BYVoid/OpenCC" class="chip" target="_blank">OpenCC</a>
+                <a href="https://www.npmjs.com/package/opencc-wasm" class="chip" target="_blank">npm</a>
+                <a href="https://t.me/+TVq4LmPRlN9hZjE0" class="chip" target="_blank">Telegram</a>
+            </p>
+            <p>16 種配置對比演示頁。所有轉換均於本地瀏覽器內完成。</p>
+            <p style="font-size: 0.8rem;">
+                OpenCC is open source software licensed under <a href="https://www.apache.org/licenses/LICENSE-2.0"
+                    target="_blank">Apache 2.0</a>. Copyright © OpenCC contributors.
+            </p>
         </div>
     </div>
 
