--- a/converter.html
+++ b/converter.html
@@ -151,10 +151,18 @@
     </div>
 
     <div class="footer">
-      <a href="index.html" class="chip" style="text-decoration:none;">首頁 Home</a>
-      <a href="https://github.com/frankslin/OpenCC/tree/master/wasm-lib" target="_blank" class="chip"
-        style="text-decoration:none;">GitHub</a> 於本地進行轉換。<br>OpenCC <a href="https://github.com/byvoid/OpenCC"
-        target="_blank">GitHub</a> <a href="https://t.me/+TVq4LmPRlN9hZjE0" target="_blank">Telegram</a>
+      <p class="chips">
+        <a href="index.html" class="chip" style="text-decoration:none;">首頁 Home</a>
+        <a href="https://github.com/frankslin/OpenCC/tree/master/wasm-lib" class="chip" target="_blank">OpenCC WASM</a>
+        <a href="https://github.com/BYVoid/OpenCC" class="chip" target="_blank">OpenCC</a>
+        <a href="https://www.npmjs.com/package/opencc-wasm" class="chip" target="_blank">npm</a>
+        <a href="https://t.me/+TVq4LmPRlN9hZjE0" class="chip" target="_blank">Telegram</a>
+      </p>
+      <p>本演示頁加載 opencc-wasm v__OPENCC_WASM_VERSION__ 後，轉換全部於本地瀏覽器內進行，保護您的隱私。</p>
+      <p style="font-size: 0.8rem;">
+        OpenCC is open source software licensed under <a href="https://www.apache.org/licenses/LICENSE-2.0"
+          target="_blank">Apache 2.0</a>. Copyright © OpenCC contributors.
+      </p>
     </div>
   </div>
 
