--- a/wasm.html
+++ b/wasm.html
@@ -116,7 +116,19 @@
     </div>
 
     <div class="footer">
-      本頁基於 <a href="https://www.npmjs.com/package/opencc-wasm" target="_blank" rel="noreferrer">opencc-wasm</a>
+      <p class="chips">
+        <a href="index.html" class="chip" style="text-decoration:none;">首頁 Home</a>
+        <a href="https://github.com/frankslin/OpenCC/tree/master/wasm-lib" class="chip" target="_blank">OpenCC WASM</a>
+        <a href="https://github.com/BYVoid/OpenCC" class="chip" target="_blank">OpenCC</a>
+        <a href="https://www.npmjs.com/package/opencc-wasm" class="chip" target="_blank">npm</a>
+        <a href="https://t.me/+TVq4LmPRlN9hZjE0" class="chip" target="_blank">Telegram</a>
+      </p>
+      <p>WASM Low-Level API 演示頁。基於 <a href="https://www.npmjs.com/package/opencc-wasm" target="_blank"
+          rel="noreferrer">opencc-wasm</a> 於本地執行。</p>
+      <p style="font-size: 0.8rem;">
+        OpenCC is open source software licensed under <a href="https://www.apache.org/licenses/LICENSE-2.0"
+          target="_blank">Apache 2.0</a>. Copyright © OpenCC contributors.
+      </p>
     </div>
   </div>
 
