--- a/cdn.html
+++ b/cdn.html
@@ -75,7 +75,19 @@
         </div>
 
         <div class="footer">
-            本頁面通過 jsdelivr CDN 加載 opencc-wasm __OPENCC_WASM_VERSION__，使用 opencc-js 相容 API，自動從 CDN 抓取配置與字典。
+            <p class="chips">
+                <a href="index.html" class="chip" style="text-decoration:none;">首頁 Home</a>
+                <a href="https://github.com/frankslin/OpenCC/tree/master/wasm-lib" class="chip" target="_blank">OpenCC
+                    WASM</a>
+                <a href="https://github.com/BYVoid/OpenCC" class="chip" target="_blank">OpenCC</a>
+                <a href="https://www.npmjs.com/package/opencc-wasm" class="chip" target="_blank">npm</a>
+                <a href="https://t.me/+TVq4LmPRlN9hZjE0" class="chip" target="_blank">Telegram</a>
+            </p>
+            <p>本頁面通過 jsdelivr CDN 加載 opencc-wasm __OPENCC_WASM_VERSION__，使用 opencc-js 相容 API。</p>
+            <p style="font-size: 0.8rem;">
+                OpenCC is open source software licensed under <a href="https://www.apache.org/licenses/LICENSE-2.0"
+                    target="_blank">Apache 2.0</a>. Copyright © OpenCC contributors.
+            </p>
         </div>
     </div>
 
