docs: add credit to TerryTian-Tech in cngov.html footer

--- a/cngov.html
+++ b/cngov.html
@@ -84,6 +84,8 @@
                 <a href="https://t.me/+TVq4LmPRlN9hZjE0" class="chip" target="_blank">Telegram</a>
             </p>
             <p>本演示頁使用了 <code>t2cngov.json</code> 配置，將繁體中文轉換至「通用規範漢字表」標準。</p>
+            <p>該配置來自 <a href="https://github.com/TerryTian-tech" target="_blank">TerryTian-Tech</a>，感謝 TerryTian-Tech
+                的貢獻！</p>
             <p style="font-size: 0.8rem;">
                 OpenCC is open source software licensed under <a href="https://www.apache.org/licenses/LICENSE-2.0"
                     target="_blank">Apache 2.0</a>. Copyright © OpenCC contributors.
