feat: add form auto-conversion demo page with HTML preservation and home page link

--- a/src/index.html
+++ b/src/index.html
@@ -597,6 +597,10 @@ console.<span class="code-function">log</span>(<span class="code-keyword">await<
                     <strong>效能測試 Benchmark</strong>
                     <span>WASM vs opencc-js 對比</span>
                 </a>
+                <a href="form-submission.html" class="demo-link">
+                    <strong>表單自動轉換 Form Demo</strong>
+                    <span>提交時自動繁簡轉換（含 HTML 格式保留）</span>
+                </a>
             </div>
         </div>
 
