feat: use extensionless URLs in sitemap and internal links

--- a/src/compare.html
+++ b/src/compare.html
@@ -58,7 +58,7 @@
 
         <div class="footer">
             <p class="chips">
-                <a href="index.html" class="chip" style="text-decoration:none;">首頁 Home</a>
+                <a href="index" class="chip" style="text-decoration:none;">首頁 Home</a>
                 <a href="https://github.com/frankslin/OpenCC/tree/master/wasm-lib" class="chip" target="_blank">OpenCC
                     WASM</a>
                 <a href="https://github.com/BYVoid/OpenCC" class="chip" target="_blank">OpenCC</a>
