--- a/src/form-submission.html
+++ b/src/form-submission.html
@@ -164,8 +164,8 @@
 
         <div class="footer">
             <p class="chips">
-                <a href="index.html" class="chip" style="text-decoration:none;">首頁 Home</a>
-                <a href="cdn.html" class="chip" style="text-decoration:none;">CDN 展示</a>
+                <a href="index" class="chip" style="text-decoration:none;">首頁 Home</a>
+                <a href="cdn" class="chip" style="text-decoration:none;">CDN 展示</a>
                 <a href="https://github.com/frankslin/OpenCC/tree/master/wasm-lib" class="chip" target="_blank">OpenCC
                     WASM</a>
             </p>
