--- a/src/index.html
+++ b/src/index.html
@@ -295,8 +295,8 @@
                 plus all official configs and prebuilt <code>.ocd2</code> dictionaries.
             </p>
             <div class="hero-buttons">
-                <a href="converter.html" class="btn btn-primary">在線轉換 Start Converting Now</a>
-                <a href="compare.html" class="btn btn-secondary" style="background:#fff;">配置對比 Compare All</a>
+                <a href="converter" class="btn btn-primary">在線轉換 Start Converting Now</a>
+                <a href="compare" class="btn btn-secondary" style="background:#fff;">配置對比 Compare All</a>
             </div>
         </div>
 
@@ -581,23 +581,23 @@ console.<span class="code-function">log</span>(<span class="code-keyword">await<
         <div class="content-section" style="background: #fafafa; border-top: 1px solid var(--border);">
             <h2>線上示範 Demo Pages</h2>
             <div class="demo-links">
-                <a href="converter.html" class="demo-link">
+                <a href="converter" class="demo-link">
                     <strong>轉換工具 Converter</strong>
                     <span>互動式繁簡轉換介面</span>
                 </a>
-                <a href="compare.html" class="demo-link">
+                <a href="compare" class="demo-link">
                     <strong>配置對比 Compare</strong>
                     <span>一次查看 16 種配置結果</span>
                 </a>
-                <a href="wasm.html" class="demo-link">
+                <a href="wasm" class="demo-link">
                     <strong>WASM API Demo</strong>
                     <span>底層 WASM API 測試</span>
                 </a>
-                <a href="benchmark.html" class="demo-link">
+                <a href="benchmark" class="demo-link">
                     <strong>效能測試 Benchmark</strong>
                     <span>WASM vs opencc-js 對比</span>
                 </a>
-                <a href="form-submission.html" class="demo-link">
+                <a href="form-submission" class="demo-link">
                     <strong>表單自動轉換 Form Demo</strong>
                     <span>提交時自動繁簡轉換（含 HTML 格式保留）</span>
                 </a>
