--- a/src/wasm.html
+++ b/src/wasm.html
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div class="chips">
-        <a href="index.html" class="chip" style="text-decoration:none;">首頁 Home</a>
+        <a href="index" class="chip" style="text-decoration:none;">首頁 Home</a>
         <a href="https://github.com/frankslin/OpenCC/tree/master/wasm-lib" target="_blank" class="chip"
           style="text-decoration:none;">GitHub</a>
         <a href="https://www.npmjs.com/package/opencc-wasm" target="_blank" class="chip"
@@ -118,7 +118,7 @@
 
     <div class="footer">
       <p class="chips">
-        <a href="index.html" class="chip" style="text-decoration:none;">首頁 Home</a>
+        <a href="index" class="chip" style="text-decoration:none;">首頁 Home</a>
         <a href="https://github.com/frankslin/OpenCC/tree/master/wasm-lib" class="chip" target="_blank">OpenCC WASM</a>
         <a href="https://github.com/BYVoid/OpenCC" class="chip" target="_blank">OpenCC</a>
         <a href="https://www.npmjs.com/package/opencc-wasm" class="chip" target="_blank">npm</a>
