--- a/src/cdn.html
+++ b/src/cdn.html
@@ -32,7 +32,7 @@
                 <span id="status-text">初始化中...</span>
             </div>
             <div class="chips">
-                <a href="index.html" class="chip" style="text-decoration:none;">首頁 Home</a>
+                <a href="index" class="chip" style="text-decoration:none;">首頁 Home</a>
                 <a href="https://github.com/frankslin/OpenCC/tree/master/wasm-lib" target="_blank" class="chip"
                     style="text-decoration:none;">GitHub</a>
                 <a href="https://www.npmjs.com/package/opencc-wasm" target="_blank" class="chip"
@@ -76,7 +76,7 @@
 
         <div class="footer">
             <p class="chips">
-                <a href="index.html" class="chip" style="text-decoration:none;">首頁 Home</a>
+                <a href="index" class="chip" style="text-decoration:none;">首頁 Home</a>
                 <a href="https://github.com/frankslin/OpenCC/tree/master/wasm-lib" class="chip" target="_blank">OpenCC
                     WASM</a>
                 <a href="https://github.com/BYVoid/OpenCC" class="chip" target="_blank">OpenCC</a>
